--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="main">
-        <canvas id="RollDice"></canvas>
+        <canvas id="RollDice" class="zdog-rolldice"></canvas>
     </div>
-
+    <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
     <script src="./main.js"></script>
     <script>
         var rollDice = new RollDice({"canvasId":'RollDice'});
+
     </script>
 </body>
 </html>
