更新 地图缩放 拖拽边界

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             <li class="dice attach-item">骰子</li>
         </ol>
         
+        <!-- 底部控件 -->
+        <ol class="zoom-control">
+            <li class="zoom-up">+</li>
+            <li class="zoom-down">-</li>
+        </ol>
+
         <!-- 规则弹窗 -->
         <div class="dialog animate__animated">
             <div class="dialog-box">
