--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
             </div>
             <!-- right -->
             <div class="right">
-                <div class="right-item">当前关卡：XXX关卡</div>
-                <div class="right-item">下一关：XXX关卡</div>
+                <div class="right-item cur-level">当前位置：<span class="value">XXX关卡</span> </div>
+                <div class="right-item next-level">下个位置：<span class="value">XXX关卡</span></div>
             </div>
         </div>
         <!-- 附加显示 -->
         <ol class="attach-view">
             <li class="rule attach-item">规则</li>
             <li class="dice attach-item">骰子</li>
+            <li class="card attach-item">卡包</li>
         </ol>
         
         <!-- 底部控件 -->
@@ -83,17 +84,36 @@
                     </div>
                 </div>
                 <div class="footer">
-                    <span class="detail">积分可在我的积分中查看</span>
                     <div class="btn submit">知道了</div>
                 </div>
             </div> 
+            <!-- 优惠券 -->
+            <div class="dialog-box coupon">
+                <img class="gold-xs xs" src="./static/imgs/gold_bg.png">
+                <div class="body">
+                    <img class="xs-top xs" src="./static/imgs/coupon_xs.png">
+                    <img class="xs-bt xs" src="./static/imgs/coupon_xs2.png">
+                    <div class="content">
+                        <div class="cp">
+                            <div class="contain">
+                                <div class="title"></div>
+                            </div>
+                            <div class="spec">满499元，领取</div>
+                        </div>
+                    </div>
+                    <div class="footer">
+                        <div class="title">恭喜您获得优惠券</div>
+                        <span class="date">积分可在我的积分中查看</span>
+                        <div class="btn submit">确定</div>
+                    </div>
+                </div>
+
+            </div>
             <!-- 确认提示 -->
             <div class="dialog-box confirm">
                 <div class="hd">系统提示</div>
                 <span class="close">×</span>
-                <div class="content">
-                    的骄傲还是觉得哈设计开发哈接口返回空间
-                </div>
+                <div class="content"></div>
                 <div class="footer">
                     <div class="btn cc">取消</div>
                     <div class="btn cf">确认</div>
@@ -103,11 +123,9 @@
             <div class="dialog-box alert">
                 <div class="hd">系统提示</div>
                 <span class="close">×</span>
-                <div class="content">
-                    的骄傲还是觉得哈设计开发哈接口返回空间
-                </div>
+                <div class="content"></div>
                 <div class="footer">
-                    <div class="btn cc">确认</div>
+                    <div class="btn cf">确认</div>
                 </div>
             </div>
             
@@ -129,15 +147,18 @@
         <!-- 音效 -->
         <audio loop="loop"  defaultPlaybackRate="2"  src="./static/rollDice_bgm.mp3" class="rollDice_bgm" id="rollDice_bgm"/>
         <audio src="./static/click.mp3" class="click_bgm" id="click_bgm"/>
+        <audio src="./static/prize.mp3" class="prize_bgm" id="prize_bgm"/>
     </div>
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
+    <script src="//s.zflb.cn/public/libs/zepto/zepto.min.js"></script>
+    <script src="//s.zflb.cn/public/libs/zflb/util.js"></script>
     <script src="./static/js/wx_sdk.js"></script>
     <script src="./game.js"></script>
     <script src="./map.js"></script>
     <script src="./rollDice.js"></script>
     <script src="./main.js"></script>
     <script>
+        window.weui = {}
         var Game = new Game();
         // Game.dialog({
         //     "type":"integral",
@@ -152,6 +173,11 @@
         //     "detail":"什么一些乱七八糟得东西提示"
         // })
         // Game.dialog({
+        //     "type":"coupon",
+        //     "title":"优惠券",
+        //     "detail":"什么一些乱七八糟得东西提示"
+        // })
+        // Game.dialog({
         //     "type":"alert",
         //     "title":"通关提示",
         //     "detail":"什么一些乱七八糟得东西提示"
@@ -159,30 +185,130 @@
         // console.log(jWeixin)
         // console.log(location)
         // 游戏初始化完成 执行之后得交互
+        console.log($(Game.screen)[0].clientHeight)
+        let params = null,
+            s = null;
+        if(location.search){
+            params = location.search.split('?')[1];
+            s = resetParam(params);
+        }
+        var url = '//wbt.zflb.cc/mp/youyuan2020/game/play',
+            poi = (s && s.poi) || -1,
+            // token ='21a3C3lpdtIo3iYkrVrj4aYs5JUXJm4jFiUjRfK6T%2BkUpwjbUqzjQfcawUymBcr%2FdN4Oin6%2FO5%2FccdDAGc3IFCUHCp9DsfA';
+            token = encodeURIComponent(s && s.token);
+        if(token && token != 'null'){
+            $('.attach-view .card').show()
+        }
         Game.init(function(){
-            console.log("游戏加载完成")
-            Game.dialog({
-                "type":"confirm",
-                "title":"通关提示",
-                "detail":"什么一些乱七八糟得东西提示"
-            });
-            if(location.search){
-                let params = location.search.split('?')[1];
-                var s = resetParam(params);
-                if(s.token){
-                    localStorage.setItem('token',s.token);
-                }else{
-                    // 未登录  去登陆
-                    jWeixin.miniProgram.reLaunch({url: "/pages/index?current=user&link="+ encodeURIComponent(location.href)});
-                }
-            }
-
+            $('.top-info').hide();
             var curLevel = JSON.parse(localStorage.getItem('currentLevel'));
             if(curLevel){
-                console.log(Game)
                 Game.map.location(curLevel)
             }
+            // 发请求
+            Zepto.getJSON(`${url}?poi=${poi}&token=${token}`,res =>{
+                console.log(res)
+                if(res.body.code == 99){
+                    Game.dialog({
+                        "type":"alert",
+                        "title":res.body.title,
+                        "detail":res.body.remark
+                    },function(){
+                        console.log("去登陆")
+                        // 未登录  去登陆
+                        jWeixin.miniProgram.reLaunch({url: "/pages/index?current=user&link="+ encodeURIComponent(location.href)});
+                    });
+                }else if(res.body.code == 102 || res.body.code == 103){
+                   Game.dialog({
+                        "type":"confirm",
+                        "title":res.body.title,
+                        "detail":res.body.remark
+                    },function(rs1){
+                        console.log("接收到回调===>"+rs1)
+                        Zepto.getJSON(`${url}?poi=${poi}&token=${token}&confirm=1`,r =>{
+                        // console.log(r)
+                            if(r.body.code == 104){
+                                // 普通参与
+                                var qt = setTimeout(() => {
+                                    Game.dialog({
+                                        "type":"integral",
+                                        "data":{
+                                            "integral":r.body.point,
+                                            "detail":r.body.remark
+                                        }
+                                    });
+                                    // 更新信息
+                                    updateTopInfo(r.body);
+                                    clearTimeout(qt);
+                                },300);
+                            }else if(r.body.code == 105){
+                                // 通关赛参与
+                                Game.map.location(r.body.ngame)
+                            }else if(r.body.code == 110){
+                                // 通关赛参与
+                                Game.map.location(r.body.ngame)
+                            }
+                        })
+                    })
+                }else if(res.body.code === 100){
+                    Game.dialog({
+                        "type":"alert",
+                        "title":res.body.title,
+                        "detail":res.body.remark
+                    })
+                }else if(res.body.code == 105){
+                    // 通关赛参与
+                    Game.map.location(r.body.ngame)
+                }else if(res.body.code == 110){
+                    // 通关赛参与
+                    Game.dialog({
+                        "type":"integral",
+                        "data":{
+                            "integral":r.body.point,
+                            "detail":r.body.remark
+                        }
+                    })
+                }else if(res.body.code == 101 && res.body.coupon){
+                    // 通关赛参与
+                    Game.dialog({
+                        "type":"coupon",
+                        "title":res.body.title,
+                        "content":res.body.coupon
+                    })
+                }
+                console.log("更新数据")
+                // 更新信息
+                updateTopInfo(res.body);
+            })
         })
+
+        // 更新头部数据
+        function updateTopInfo(data){
+            var _html = `
+                <div class="user left-item">
+                <img src="${data.user.avatar}" class="logo">
+                <div class="user-info">
+                    <div class="name left-item text-cut">${data.user.nickname}</div>
+                    <div class="integral left-item text-cut">积分：${data.user.point1}</div>
+                </div>
+            </div>`;
+            if(data.user.avatar){
+                $('.top-info').show();
+                $('.top-info .left').html(_html);
+            }else{
+                $('.top-info').hide();
+            }
+            if(data.cgame){
+                $('.top-info .right .cur-level .value').html(data.cgame.po_name);
+            }else{
+                $('.top-info .right .cur-level').hide();
+            }
+            if(data.ngame){
+                $('.top-info .right .next-level .value').html(data.ngame.po_name);
+            }else{
+                $('.top-info .right .next-level').hide();
+            }
+        }
 
         // 生成search对象
         function resetParam(params){
